add register api and unit test
